--- a/blog/other_blog/templates/other_blog.html
+++ b/blog/other_blog/templates/other_blog.html
@@ -183,7 +183,14 @@
 				{%empty%}
 				<h1>没有文章</h1>
 				{%endfor%}
+				{% if art.has_previous%}
+					<a href="/other_blog/other_blog/{{id}}/?pagenum={{art.previous_page_number}}">上一页</a>
+					{% endif%}
+				第{{art.number}}页/共{{art.paginator.num_pages}}页
+					{% if art.has_next%}
+					<a href="/other_blog/other_blog/{{id}}/?pagenum={{art.next_page_number}}">下一页</a>
 
+					{%endif%}
 
 
 			</div>
